remove hoverable dropdown to avoid issues on mobile device

--- a/css/utilities/dropdown.css
+++ b/css/utilities/dropdown.css
@@ -6,8 +6,7 @@
   display: none;
   position: absolute;
 }
-.dropdown button:focus ~ div,
-.hoverable:hover > div {
+.dropdown button:focus ~ div {
   display: block;
   padding-top: 0.5rem;
 }
